# PyRBFNetwork2

./: .gitignore  .project  .pydevproject  CMakeLists.txt
rbfnetwork/: __init__.py  functions.cpp  normalizer.py  rbfclassifier.py  rbfnetwork.py  test.py
